@@ -1,3 +1,11 @@
+2010-04-14  Andreas Kupries  <andreask@activestate.com>
+
+	* library/platform/platform.tcl: Linux platform identification:
+	Check /lib64 for existence of files matching libc* before
+	accepting it as base directory. This can happen on weirdly
+	installed 32bit systems which have an empty or partially filled
+	/lib64 without an actual libc. Bumped to version 1.0.6.
+
 2010-04-03  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>
 
 	* generic/tclStringObj.c: (SetStringFromAny): avoid trampling
